# StockMeme

./: .envrc  Deck.py  README.md  bot.py  default.nix  fetch_ema45.py  fetch_supertrend.py  getPrice.py  pyproject.toml
.direnv/: nix-profile-.4703.c5101e457206  nix-profile-.4703.c5101e457206.rc
python/: blackjack.py  bot.py
